DockerExampleSpring/controller-helloworld-ingress-spring-soumya.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: controller-helloworld-ingress-spring-soumya
  namespace: soumya-399001
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /soumya/spring/helloworld(/|$)(.*)
            backend:
              serviceName: ingress-spring-service
              servicePort: 8080
